concert-demo/blue-bank/kubernetes-manifests/gpu-cluster/gpu-cluster-backup/clusterpolicy.yaml
apiVersion: v1
items:
- apiVersion: nvidia.com/v1
  kind: ClusterPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"nvidia.com/v1","kind":"ClusterPolicy","metadata":{"annotations":{},"name":"gpu-cluster-policy"},"spec":{"daemonsets":{"priorityClassName":"system-node-critical","tolerations":[]},"dcgm":{"enabled":true},"dcgmExporter":{"config":{"name":""},"enabled":true},"devicePlugin":{"enabled":true},"driver":{"certConfig":{"name":""},"enabled":true,"licensingConfig":{"configMapName":"","nlsEnabled":false},"repoConfig":{"configMapName":""}},"gfd":{"enabled":true},"nodeStatusExporter":{" [...]
    creationTimestamp: "2026-03-24T16:48:51Z"
    generation: 1
    name: gpu-cluster-policy
    resourceVersion: "247632"
    uid: c5cce449-f1c2-4a22-962c-266407350f4c
  spec:
    daemonsets:
      priorityClassName: system-node-critical
      tolerations: []
      updateStrategy: RollingUpdate
    dcgm:
      enabled: true
    dcgmExporter:
      config:
        name: ""
      enabled: true
    devicePlugin:
      enabled: true
    driver:
      certConfig:
        name: ""
      enabled: true
      licensingConfig:
        configMapName: ""
        nlsEnabled: false
      repoConfig:
        configMapName: ""
    gfd:
      enabled: true
    nodeStatusExporter:
      enabled: true
    operator:
      defaultRuntime: crio
      runtimeClass: nvidia
    toolkit:
      enabled: true
      installDir: /usr/local/nvidia
  status:
    conditions:
    - lastTransitionTime: "2026-03-24T17:04:56Z"
      message: ClusterPolicy is ready as all resources have been successfully reconciled
      reason: Reconciled
      status: "True"
      type: Ready
    - lastTransitionTime: "2026-03-24T17:04:56Z"
      message: ""
      reason: Ready
      status: "False"
      type: Error
    namespace: nvidia-gpu-operator
    state: ready
kind: List
metadata:
  resourceVersion: ""
