concert-demo/blue-bank/kubernetes-manifests/gpu-cluster/gpu-cluster-backup/dcgm-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"dcgm-metrics","namespace":"nvidia-gpu-operator"},"spec":{"ports":[{"port":9400,"targetPort":9400}],"selector":{"app":"nvidia-dcgm-exporter"}}}
  creationTimestamp: "2026-03-31T15:50:39Z"
  name: dcgm-metrics
  namespace: nvidia-gpu-operator
  resourceVersion: "3649345"
  uid: bd23c510-d24d-4df2-bae2-cf52d4354abf
spec:
  clusterIP: 172.30.176.171
  clusterIPs:
  - 172.30.176.171
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 9400
    protocol: TCP
    targetPort: 9400
  selector:
    app: nvidia-dcgm-exporter
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
