concert-demo/blue-bank/kubernetes-manifests/gpu-cluster/gpu-cluster-backup/vllm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"vllm-granite"},"name":"vllm-granite","namespace":"bluebank"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"vllm-granite"}},"template":{"metadata":{"annotations":{"prometheus.io/path":"/metrics","prometheus.io/port":"8000","prometheus.io/scrape":"true"},"labels":{"active":"true","app":"vllm-granite"}},"spec":{"containers":[{"args":["--model","/models/granite-4.0-h-small","--trust-remote-code", [...]
  creationTimestamp: "2026-03-24T18:23:18Z"
  generation: 25
  labels:
    app: vllm-granite
  name: vllm-granite
  namespace: bluebank
  resourceVersion: "1262381"
  uid: c789ca41-827f-48fe-83f0-d490de64f030
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vllm-granite
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-03-26T00:12:32-04:00"
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        active: "true"
        app: vllm-granite
    spec:
      containers:
      - args:
        - --model
        - /models/granite-4.0-h-small
        - --trust-remote-code
        - --max-model-len
        - "4096"
        - --gpu-memory-utilization
        - "0.80"
        - --max-num-seqs
        - "10"
        - --port
        - "8000"
        - --served-model-name
        - granite-chatbot
        image: vllm/vllm-openai:v0.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: vllm
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            nvidia.com/gpu: "1"
          requests:
            cpu: "4"
            memory: 16Gi
            nvidia.com/gpu: "1"
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /models
          name: models
          readOnly: true
        - mountPath: /dev/shm
          name: shm
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: worker2.bluebank-demo-2.cp.fyre.ibm.com
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /opt/models
          type: Directory
        name: models
      - emptyDir:
          medium: Memory
          sizeLimit: 4Gi
        name: shm
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-03-24T18:23:18Z"
    lastUpdateTime: "2026-03-26T04:14:03Z"
    message: ReplicaSet "vllm-granite-78f67f7cf" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-03-26T17:07:39Z"
    lastUpdateTime: "2026-03-26T17:07:39Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 25
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
